--- a/app/assets/style/_my-variables.scss
+++ b/app/assets/style/_my-variables.scss
@@ -415,7 +415,9 @@ $spacers: (
   6: $spacer * 1.5,
   7: $spacer * 2,
   8: $spacer * 2.5,
-  9: $spacer * 3.75, 
+  9: $spacer * 2.75,
+  10:$spacer * 3.75, 
+  11:$spacer * 5
 ) !default;
 
 $negative-spacers: if($enable-negative-margins, negativify-map($spacers), null) !default;
