--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -25,7 +25,7 @@
     <nav class="navbar sticky-top navbar-light bg-white ">
       <div class="container-fluid">
         <h1 class="font-arial fs-5 mx-auto position-relative"><a class="navbar-brand text-primary lh-base"
-            href="#">EXHIBINECTION</a></h1>
+            href="index.html">EXHIBINECTION</a></h1>
         <ul class="d-flex list-unstyled position-absolute bottom-0 end-0 align-items-end">
           <li><a href="#" class="fs-7 text-dark me-6 d-none d-md-block">Sign in</a></li>
           <li><a href="#" class="fs-7 text-dark me-6 d-none d-md-block">Sign up</a></li>
@@ -193,76 +193,94 @@
 
     <%- contents %>
        <!-- you will like --> 
-<section class="container <%- display %>">
-  <h2 data-aos="fade-up" class="fs-3 fw-bold mt-9 mb-6">猜你也喜歡...</h2>
-  <div class="row">
-    <div class="col-12 col-md-11 offset-md-1">
-      <div class="swiper-container mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div class="card border-0 rounded-0">
-              <img
-                src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/ricardo-gomez-angel-WxpnuLzqZN4-unsplash.jpg"
-                class="card-img-top img-fluid h-100" alt="...">
-              <div class="card-body">
-                <h5 class="card-title fs-6 fw-bold">No.22 線上設計展</h5>
-                <p class="card-text fs-6">$350</p>
-              </div>
-            </div>
+
+      <!-- Swiper -->
+
+<div class="container m-auto <%- display %>">
+        <h2 data-aos="fade-up" class="fs-3 fw-bold mt-10 mb-6">猜你也喜歡...</h2>
+        <div class="rowv">         
+          <div class="col-12 col-md-11 offset-md-1">
+      
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+           <div class="card border-0 rounded-0">
+          <img
+            src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/ricardo-gomez-angel-WxpnuLzqZN4-unsplash.jpg"
+            class="card-img-top img-fluid" alt="..." style="height:265px">
+          <div class="card-body">
+            <h5 class="card-title fs-6 fw-bold">No.22 線上設計展</h5>
+            <p class="card-text fs-6">$350</p>
           </div>
-          <div class="swiper-slide">
-            <div class="card border-0 rounded-0">
-              <img
-                src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/ricardo-gomez-angel-WxpnuLzqZN4-unsplash.jpg"
-                class="card-img-top img-fluid h-100" alt="...">
-              <div class="card-body">
-                <h5 class="card-title fs-6 fw-bold">No.22 線上設計展</h5>
-                <p class="card-text fs-6">$350</p>
-              </div>
-            </div>
+        </div>
+      </div>
+        <div class="swiper-slide">
+           <div class="card border-0 rounded-0">
+          <img
+            src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/petri-heiskanen-bR9gFJqAnzA-unsplash.jpg"
+            class="card-img-top img-fluid" alt="..." style="height:265px">
+          <div class="card-body">
+            <h5 class="card-title fs-6 fw-bold">No.22 線上設計展</h5>
+            <p class="card-text fs-6">$350</p>
           </div>
-          <div class="swiper-slide">
-            <div class="card border-0 rounded-0">
-              <img
-                src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/ricardo-gomez-angel-WxpnuLzqZN4-unsplash.jpg"
-                class="card-img-top img-fluid h-100" alt="...">
-              <div class="card-body">
-                <h5 class="card-title fs-6 fw-bold">No.22 線上設計展</h5>
-                <p class="card-text fs-6">$350</p>
-              </div>
-            </div>
+        </div>
+      </div>
+        <div class="swiper-slide"> 
+          <div class="card border-0 rounded-0">
+          <img
+            src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/museums-victoria-kiDwVL_5ZBY-unsplash%20(1).jpg"
+            class="card-img-top img-fluid" alt="..." style="height:265px">
+          <div class="card-body">
+            <h5 class="card-title fs-6 fw-bold">No.22 線上設計展</h5>
+            <p class="card-text fs-6">$350</p>
           </div>
-          <div class="swiper-slide">
-            <div class="card border-0 rounded-0">
-              <img
-                src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/ricardo-gomez-angel-WxpnuLzqZN4-unsplash.jpg"
-                class="card-img-top img-fluid h-100" alt="...">
-              <div class="card-body">
-                <h5 class="card-title fs-6 fw-bold">No.22 線上設計展</h5>
-                <p class="card-text fs-6">$350</p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide"> <div class="card border-0 rounded-0">
-            <img
-              src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/ricardo-gomez-angel-WxpnuLzqZN4-unsplash.jpg"
-              class="card-img-top img-fluid h-100" alt="...">
-            <div class="card-body">
-              <h5 class="card-title fs-6 fw-bold">No.22 線上設計展</h5>
-              <p class="card-text fs-6">$350</p>
-            </div>
-          </div>
-        </div>     
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="card border-0 rounded-0">
+       <img
+         src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/ricardo-gomez-angel-WxpnuLzqZN4-unsplash.jpg"
+         class="card-img-top img-fluid" alt="..." style="height:265px">
+       <div class="card-body">
+         <h5 class="card-title fs-6 fw-bold">No.22 線上設計展</h5>
+         <p class="card-text fs-6">$350</p>
+       </div>
+     </div>
+   </div>
+     <div class="swiper-slide">
+        <div class="card border-0 rounded-0">
+       <img
+         src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/petri-heiskanen-bR9gFJqAnzA-unsplash.jpg"
+         class="card-img-top img-fluid" alt="..." style="height:265px">
+       <div class="card-body">
+         <h5 class="card-title fs-6 fw-bold">No.22 線上設計展</h5>
+         <p class="card-text fs-6">$350</p>
+       </div>
+     </div>
+   </div>
+     <div class="swiper-slide"> 
+       <div class="card border-0 rounded-0">
+       <img
+         src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/museums-victoria-kiDwVL_5ZBY-unsplash%20(1).jpg"
+         class="card-img-top img-fluid" alt="..." style="height:265px">
+       <div class="card-body">
+         <h5 class="card-title fs-6 fw-bold">No.22 線上設計展</h5>
+         <p class="card-text fs-6">$350</p>
+       </div>
+     </div>
+   </div>
+      </div>
+      
     </div>
   </div>
 </div>
 </div>
-</section>
   </main>
+  
 
   <!-- subscribe area -->
 
-  <section class="bgCoverCenter mt-9 <%- display %>"
+  <div class="bgCoverCenter mt-10 <%- display %>"
     style="height:400px; background-image: url('https://huan5678.github.io/week6-EXHIBINECTION/assets/images/wladislaw-peljuchno-Y_f1aHpR1tc-unsplash.jpg')">
     <div class="container d-flex flex-column justify-content-end h-100 py-7">
       <div class="row">
@@ -276,7 +294,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
      <!-- footer area -->
   <footer class="footer <%- display %>">
     <div class="container d-flex justify-content-between align-items-center">
