--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -48,14 +48,14 @@
 
             <div class="offcanvas-body bg-black">
 
-              <ul class="ps-0 ps-md-7">
+              <ul class="ps-0 ps-md-7" style="min-width:300px;">
                 <li class="card border-0 mb-2 card-close">
                   <button type="button" class="btn-close text-reset p-2" data-bs-dismiss="card-close"
                     aria-label="Close"></button>
 
-                  <div class="card-body d-flex px-10 pt-0 pb-5 mb-2">
+                  <div class="card-body d-flex px-md-10 pt-0 pb-5 mb-2">
                     <div class="d-flex justify-content-between w-100">
-                      <div class="d-flex ps-7 pe-3">
+                      <div class="d-flex ps-3 ps-md-7 pe-3">
                         <img
                           src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/alina-grubnyak-R84Oy89aNKs-unsplash.jpg"
                           alt="exhibition img" class="card-img h-120 w-120">
@@ -74,7 +74,7 @@
                                 flex-column flex-md-row
                                 justify-content-center
                                 align-items-center
-                                w-30 ps-7
+                                w-30 ps-md-7 ps-3
                               ">
                           <a href="#" class="link-black mb-1 mb-md-0 p-0 pe-md-1"><span class="material-icons"> remove
                             </span></a>
@@ -91,9 +91,9 @@
                   <button type="button" class="btn-close text-reset p-2" data-bs-dismiss="card-close"
                     aria-label="Close"></button>
 
-                  <div class="card-body d-flex px-10 pt-0 pb-5 mb-2">
+                  <div class="card-body d-flex px-md-10 pt-0 pb-5 mb-2">
                     <div class="d-flex justify-content-between w-100">
-                      <div class="d-flex ps-7 pe-3">
+                      <div class="d-flex ps-3 ps-md-7 pe-3">
                         <img
                           src="https://images.unsplash.com/photo-1545178803-4056771d60a3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1500&amp;q=80"
                           alt="exhibition img" class="card-img h-120 w-120">
@@ -112,7 +112,7 @@
                     flex-column flex-md-row
                     justify-content-center
                     align-items-center
-                    w-30 ps-7
+                    w-30 ps-md-7 ps-3
                   ">
                           <a href="#" class="link-black mb-1 mb-md-0 p-0 pe-md-1"><span class="material-icons"> remove
                             </span></a>
@@ -129,9 +129,9 @@
                   <button type="button" class="btn-close text-reset p-2" data-bs-dismiss="card-close"
                     aria-label="Close"></button>
 
-                  <div class="card-body d-flex px-10 pt-0 pb-5 mb-2">
+                  <div class="card-body d-flex px-md-10 pt-0 pb-5 mb-2">
                     <div class="d-flex justify-content-between w-100">
-                      <div class="d-flex ps-7 pe-3">
+                      <div class="d-flex ps-3 ps-md-7 pe-3">
                         <img
                           src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/michel-catalisano--a0D9LpcKV8-unsplash.jpg"
                           alt="exhibition img" class="card-img h-120 w-120">
@@ -150,7 +150,7 @@
                     flex-column flex-md-row
                     justify-content-center
                     align-items-center
-                    w-30 ps-7
+                    w-30 ps-md-7 ps-3
                   ">
                           <a href="#" class="link-black mb-1 mb-md-0 p-0 pe-md-1"><span class="material-icons"> remove
                             </span></a>
